--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: Deploy AWS CDK
 
 # Controls when the action will run. 
 on:
-  #push:
-    #branches: [ main ]
-  #pull_request:
-    #branches: [ main ]
+  push:
+    branches: [ sns ]
+  pull_request:
+    branches: [ sns ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -38,6 +38,6 @@ jobs:
         run: cdk synth
         working-directory: CDK-AWS
 
-      - name: CDK Deploy
-        run: cdk deploy
-        working-directory: CDK-AWS
+      # - name: CDK Deploy
+      #   run: cdk deploy
+      #   working-directory: CDK-AWS
