--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,17 @@ jobs:
 
       - name: install npm
         run: 'sudo apt update -y && sudo apt install nodejs npm -y'
+        working-directory: CDK-AWS
 
       - name: Install AWS CDK
         run: 'sudo npm install -g aws-cdk'
+        working-directory: CDK-AWS
+
+
+        
+      - name: source .env/bin/activate 
+        run: 'source .env/bin/activate'
+        working-directory: CDK-AWS
 
       - name: Install Requirements 
         run: 'pip3 install -r requirements.txt'
