--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
         
       - name: source .env/bin/activate 
-        run: 'source .env/bin/activate'
+        run: 'source .venv/bin/activate'
         working-directory: CDK-AWS
 
       - name: Install Requirements 
