--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         
       - name: source .env/bin/activate 
         run: 'source .venv/bin/activate'
-        working-directory: CDK-AWS
+        #working-directory: CDK-AWS
 
       - name: Install Requirements 
         run: 'pip3 install -r requirements.txt'
