--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,9 @@ jobs:
 
 
         
-      - name: source .env/bin/activate 
-        run: 'source .venv/bin/activate'
-        #working-directory: CDK-AWS
+      # - name: source .env/bin/activate 
+      #   run: 'source .venv/bin/activate'
+      #   #working-directory: CDK-AWS
 
       - name: Install Requirements 
         run: 'pip3 install -r requirements.txt'
