--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         working-directory: CDK-AWS
 
       - name: Install AWS CDK
-        run: 'sudo npm install -g aws-cdk'
+        run: 'sudo npm update -g aws-cdk'
         working-directory: CDK-AWS
 
 
